--- a/tests/SpecRunner.html
+++ b/tests/SpecRunner.html
@@ -12,11 +12,11 @@
   <script src="lib/jasmine-2.4.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <!-- <script src="../src/onerepmaxlib.js"></script> -->
-  <script src="../src/onerepmaxlib.min.js"></script>
+  <!-- <script src="../src/onerepmax.js"></script> -->
+  <script src="../src/onerepmax.min.js"></script>
 
   <!-- include spec files here... -->
-  <script src="spec/OneRepMaxSpec.js"></script>
+  <script src="spec/onerepmax.spec.js"></script>
 
 </head>
 
