Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -41,31 +41,40 @@
 <h2>
 <a id="usage" class="anchor" href="#usage" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Usage</h2>
 
-<p>To use <em>onerepmax-js</em>, use your favorite means of including the source code into your project or webpage. When the script is executed, a global object called onerepmax will be created. It is through this object that the calculations will be performed.</p>
+<p>To use <em>onerepmax</em>, use your favorite means of including the source code into your project or webpage. When the script is executed, a global object called onerepmax will be created. It is through this object that the calculations will be performed.</p>
 
-<p>onerepmax contains 7 methods that are direct implementations of a specific 1RM formula (as taken from Wikipedia). The method names are based on the formulas they implement. Each of these direct formula methods take the same input:</p>
+<p><em>onerepmax</em> contains a single public method that provides access to direct implementations of a specific 1RM formula (as taken from Wikipedia). A particular formula is targeted using a string value based on the formula name, all lower case, and no punctuation. The public method is called calculate takes the following input:</p>
 
 <ul>
 <li>
 <strong>weight</strong>: a number greater than 0 that represents the weight lifted for strength testing. There is no upper bound.</li>
 <li>
 <strong>reps</strong>: a number greater than 0 and less than or equal to 10 that represents the number of times the weight was lifted during testing.</li>
+<li>
+<strong>formula</strong>: a string that represents the specific formula to use in the calculation. Available options are 'all', 'average', 'brzycki', 'epley', 'lander', 'lombardi', 'mayhew', 'oconner', and 'wathen'.</li>
 </ul>
 
-<p>Here is an example of each direct formula method call:</p>
+<p>Here is an example of each available formula option:</p>
 
-<pre><code>var orm = onerepmax.brzycki(135, 10);
-var orm = onerepmax.epley(135, 10);
-var orm = onerepmax.lander(135, 10);
-var orm = onerepmax.lombardi(135, 10);
-var orm = onerepmax.mayhew(135, 10);
-var orm = onerepmax.oconner(135, 10);
-var orm = onerepmax.wathen(135, 10);
+<pre><code>var maxes,
+    max;
+
+maxes = onerepmax.calculate(135, 10, 'all');    // returns an object
+max = onerepmax.calculate(135, 10, 'average');  // returns a number
+max = onerepmax.calculate(135, 10, 'brzycki');  // returns a number
+max = onerepmax.calculate(135, 10, 'epley');    // returns a number
+max = onerepmax.calculate(135, 10, 'lander');   // returns a number
+max = onerepmax.calculate(135, 10, 'lombardi'); // returns a number
+max = onerepmax.calculate(135, 10, 'mayhew');   // returns a number
+max = onerepmax.calculate(135, 10, 'oconner');  // returns a number
+max = onerepmax.calculate(135, 10, 'wathen');   // returns a number
 </code></pre>
 
-<p>When invalid arguments are passed into these methods (see the descriptions for <strong>weight</strong> and <strong>reps</strong> above), the methods will return -1.</p>
+<p><em>Note: the numeric results are to two decimal places, if a calculation results in a fractional value.</em></p>
 
-<p>onerepmax contains two additional methods that aim to make the 7 formula methods a bit more useful. These two methods are:</p>
+<p>When invalid weight and rep values are passed into these methods (see the descriptions for <strong>weight</strong> and <strong>reps</strong> above), the methods will return -1. If an invalid formula is passed in, the calculation will default to the average method.</p>
+
+<p>Along with the 7 formulas from the Wikipedia entry, <em>onerepmax</em> contains two special methods that aim to supplement the 7 one rep maximum formulas found on Wikipedia. These two methods are:</p>
 
 <ul>
 <li>
@@ -74,13 +83,10 @@ var orm = onerepmax.wathen(135, 10);
 <strong>all</strong>: returns an object containing the results of the 7 formula methods and the average method.</li>
 </ul>
 
-<p>These two methods expect the same parameters as the 7 formula methods. Likewise, when invalid arguments are passed to the average method, -1 will be returned. When invalid arguments are passed to the all method, an empty object will be returned.</p>
+<h2>
+<a id="unit-tests" class="anchor" href="#unit-tests" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Unit Tests</h2>
 
-<p>Here are example calls to these two methods:</p>
-
-<pre><code>var orm = onerepmax.average(135, 10);
-var allOrms = onerepmax.all(135, 10);
-</code></pre>
+<p>Included with this repo are the unit tests written using Jasmine and the stand alone test runner. The test coverage is not perfect but it provides reasonable confidence that this library will function as needed.</p>
       </section>
     </div>
 
