Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ max = onerepmax.calculate(135, 10, 'wathen');   // returns a number
 
 <p>When invalid weight and rep values are passed into these methods (see the descriptions for <strong>weight</strong> and <strong>reps</strong> above), the methods will return -1. If an invalid formula is passed in, the calculation will default to the average method.</p>
 
-<p>Along with the 7 formulas from the Wikipedia entry, <em>onerepmax</em> contains two special methods that aim to supplement the 7 one rep maximum formulas found on Wikipedia. These two methods are:</p>
+<p><em>onerepmax</em> contains two special methods that aim to supplement the 7 one rep maximum formulas found on Wikipedia. These two methods are:</p>
 
 <ul>
 <li>
